project links alignment fix

--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -42,6 +42,7 @@
     @include breakpoint-up(medium) {
       padding: 3rem 3.5rem 4rem;
       display: grid;
+      grid-template-columns: 1fr 1fr;
       grid-template-areas: 
         "title links"
         "details details"
